# KittyCrew

./: .gitignore  README.md  pyproject.toml
docs/readme/: README.es.md  README.ja.md  README.ko.md  README.ru.md  README.zh-CN.md  README.zh-TW.md
docs/superpowers/plans/: 2026-04-04-global-settings.md
docs/superpowers/specs/: 2026-04-04-global-settings-design.md
src/kittycrew/: __main__.py  a2a_app.py  app.py  catalog.py  main.py  member_names.py  models.py  service.py  skills.py  store.py
src/kittycrew/providers/: __init__.py  base.py  claude_code.py  codex.py  github_copilot.py  kimi.py  opencode.py
src/kittycrew/static/: app.js  styles.css
src/kittycrew/templates/: index.html
tests/: conftest.py  test_app.py  test_app_ui_state.mjs  test_providers.py  test_service.py
